--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
           <div class="col-lg-6 menu-item filter-share">
             <div class="menu-content">
-              <div class="col-lg-10"><a href="#">Jamón ibérico con pan tumaca</a></div>
+              <div class="col-lg-10"><a href="#">Jamón ibéric con pan tumaca</a></div>
               <span>22 €</span>
             </div>
           </div>
