--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                   grandes ventanales rodeados de flores. Pero esto no es todo, tenéis que conocer nuestra
                   gastronomía, una cocina moderna y actual que os enamorará tanto a la vista como en el paladar.</p>
                 <div>
-                  <a href="#menu" class="btn-menu animate__animated animate__fadeInUp scrollto">Nuestro menu</a>
-                  <a href="tel:+918272073" class="btn-book animate__animated animate__fadeInUp scrollto">Reserva tu
+                  <a href="#menu" class="btn-menu animate__animated animate__fadeInUp scrollto mt-4">Nuestro menu</a>
+                  <a href="tel:+918272073" class="btn-book animate__animated animate__fadeInUp scrollto mt-4">Reserva tu
                     mesa</a>
                 </div>
               </div>
