--- a/index.html
+++ b/index.html
@@ -226,91 +226,91 @@
 
           <div class="col-lg-6 menu-item filter-share">
             <div class="menu-content">
-              <div class="col-lg-10"><a href="#">Caña de lomo ibérico</a></div>
+              <div class="col-8 col-lg-10"><a>Caña de lomo ibérico</a></div>
               <span>22 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-share">
             <div class="menu-content">
-              <div class="col-lg-10"><a href="#">Selección de quesos del país</a></div>
+              <div class="col-8 col-lg-10"><a>Selección de quesos del país</a></div>
               <span>15 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-share">
             <div class="menu-content">
-              <div class="col-lg-10"><a href="#">Anchoas del Cantábrico</a></div>
+              <div class="col-8 col-lg-10"><a>Anchoas del Cantábrico</a></div>
               <span>18 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-share">
             <div class="menu-content">
-              <div class="col-lg-10"><a href="#">Selección de croquetas</a></div>
+              <div class="col-8 col-lg-10"><a>Selección de croquetas</a></div>
               <span>12 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-share">
             <div class="menu-content">
-              <div class="col-lg-10"><a href="#">Chipirones a la andaluza</a></div>
+              <div class="col-8 col-lg-10"><a>Chipirones a la andaluza</a></div>
               <span>13 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-share">
             <div class="menu-content">
-              <div class="col-lg-10"><a href="#">Calamar de caña con crema de patata y tinta de calamar</a></div>
+              <div class="col-8 col-lg-10"><a>Calamar de caña con crema de patata y tinta de calamar</a></div>
               <span>17 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-share">
             <div class="menu-content">
-              <div class="col-lg-10"><a href="#">Pulpo con cola de gambón al ajillo</a></div>
+              <div class="col-8 col-lg-10"><a>Pulpo con cola de gambón al ajillo</a></div>
               <span>15 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-share">
             <div class="menu-content">
-              <div class="col-lg-10"><a href="#">Ensaladilla rusa casera</a></div>
+              <div class="col-8 col-lg-10"><a>Ensaladilla rusa casera</a></div>
               <span>12 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-share">
             <div class="menu-content">
-              <div class="col-lg-10"><a href="#">Gambón en tempura de ajo</a></div>
+              <div class="col-8 col-lg-10"><a>Gambón en tempura de ajo</a></div>
               <span>12 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-share">
             <div class="menu-content">
-              <div class="col-lg-10"><a href="#">Bacalao de la casa</a></div>
+              <div class="col-8 col-lg-10"><a>Bacalao de la casa</a></div>
               <span>12 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-share">
             <div class="menu-content">
-              <div class="col-lg-10"><a href="#">Mosaico de huevos rotos con jamón</a></div>
+              <div class="col-8 col-lg-10"><a>Mosaico de huevos rotos con jamón</a></div>
               <span>14 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-share">
             <div class="menu-content">
-              <div class="col-lg-10"><a href="#">Mosaico de huevos rotos con gambas y gulas</a></div>
+              <div class="col-8 col-lg-10"><a>Mosaico de huevos rotos con gambas y gulas</a></div>
               <span>14 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-share">
             <div class="menu-content">
-              <div class="col-lg-10"><a href="#">Rollos de salmón rellenos de marisco con perfume de trufa</a></div>
+              <div class="col-8 col-lg-10"><a>Rollos de salmón rellenos de marisco con perfume de trufa</a></div>
               <span>12 €</span>
 
             </div>
@@ -318,126 +318,126 @@
 
           <div class="col-lg-6 menu-item filter-share">
             <div class="menu-content">
-              <div class="col-lg-10"><a href="#">Quesadillas de pollo con 3 quesos y guacamole</a></div>
+              <div class="col-8 col-lg-10"><a>Quesadillas de pollo con 3 quesos y guacamole</a></div>
               <span>12 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-share">
             <div class="menu-content">
-              <div class="col-lg-10"><a href="#">Habitas con huevos y jamón</a></div>
+              <div class="col-8 col-lg-10"><a>Habitas con huevos y jamón</a></div>
               <span>14 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-share">
             <div class="menu-content">
-              <div class="col-lg-10"><a href="#">Combo La Maliciosa, oreja, bravas y calamares</a></div>
+              <div class="col-8 col-lg-10"><a>Combo La Maliciosa, oreja, bravas y calamares</a></div>
               <span>16 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-salads">
             <div class="menu-content">
-              <div class="col-lg-10"><a href="#">Ensalada de burrata con vinagreta de piñones</a></div>
+              <div class="col-8 col-lg-10"><a>Ensalada de burrata con vinagreta de piñones</a></div>
               <span>13 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-salads">
             <div class="menu-content">
-              <div class="col-lg-10"><a href="#">Ensalada de ventresca</a></div>
+              <div class="col-8 col-lg-10"><a>Ensalada de ventresca</a></div>
               <span>14 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-salads">
             <div class="menu-content">
-              <div class="col-lg-10"><a href="#">Ensalada de queso de cabra y nueces</a></div>
+              <div class="col-8 col-lg-10"><a>Ensalada de queso de cabra y nueces</a></div>
               <span>12 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-salads">
             <div class="menu-content">
-              <div class="col-lg-10"><a href="#">Ensalada templada de escarola, ajo chips y gambas</a></div>
+              <div class="col-8 col-lg-10"><a>Ensalada templada de escarola, ajo chips y gambas</a></div>
               <span>13 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-shellfish">
             <div class="menu-content">
-              <div class="col-lg-10"><a href="#">Zamburiñas estilo thai</a></div>
+              <div class="col-8 col-lg-10"><a>Zamburiñas estilo thai</a></div>
               <span>14 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-shellfish">
             <div class="menu-content">
-              <div class="col-lg-10"><a href="#">Mejillones al vapor</a></div>
+              <div class="col-8 col-lg-10"><a>Mejillones al vapor</a></div>
               <span>10 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-shellfish">
             <div class="menu-content">
-              <div class="col-lg-10"><a href="#">Gambón plancha</a></div>
+              <div class="col-8 col-lg-10"><a>Gambón plancha</a></div>
               <span>12 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-seas">
             <div class="menu-content">
-              <div class="col-lg-10"><a href="#">Tacos de bacalao en tempura con guacamole</a></div>
+              <div class="col-8 col-lg-10"><a>Tacos de bacalao en tempura con guacamole</a></div>
               <span>16 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-seas">
             <div class="menu-content">
-              <div class="col-lg-10"><a href="#">Tataki de atún rojo sobre cama de verduras con soja</a></div>
+              <div class="col-8 col-lg-10"><a>Tataki de atún rojo sobre cama de verduras con soja</a></div>
               <span>18 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-country">
             <div class="menu-content">
-              <div class="col-lg-10"><a href="#">Morcilla plancha</a></div>
+              <div class="col-8 col-lg-10"><a>Morcilla plancha</a></div>
               <span>10 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-country">
             <div class="menu-content">
-              <div class="col-lg-10"><a href="#">Presa ibérica con crema de calabaza y salteado de setas</a></div>
+              <div class="col-8 col-lg-10"><a>Presa ibérica con crema de calabaza y salteado de setas</a></div>
               <span>17 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-country">
             <div class="menu-content">
-              <div class="col-lg-10"><a href="#">Magret de pato con crema de patata trufada y huevo escalfado</a></div>
+              <div class="col-8 col-lg-10"><a>Magret de pato con crema de patata trufada y huevo escalfado</a></div>
               <span>15 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-country">
             <div class="menu-content">
-              <div class="col-lg-10"><a href="#">Chuletón trinchado con patatas y pimientos de Guernica</a></div>
+              <div class="col-8 col-lg-10"><a>Chuletón trinchado con patatas y pimientos de Guernica</a></div>
               <span>26 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-country">
             <div class="menu-content">
-              <div class="col-lg-10"><a href="#">Hamburguesa La Maliciosa</a></div>
+              <div class="col-8 col-lg-10"><a>Hamburguesa La Maliciosa</a></div>
               <span>11 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-country">
             <div class="menu-content">
-              <div class="col-lg-10"><a href="#">Cecina de León</a></div>
+              <div class="col-8 col-lg-10"><a>Cecina de León</a></div>
               <span>12 €</span>
             </div>
           </div>
