--- a/index.html
+++ b/index.html
@@ -219,226 +219,231 @@
 
           <div class="col-lg-6 menu-item filter-share">
             <div class="menu-content">
-              <div class="col-8 col-lg-10"><a href="#">Jamón ibérico con pan tumaca</a></div>
-              <span>22 €</span>
+              <div class="col-8 col-lg-10"><a class="menu">Jamón ibérico con pan tumaca</a></div>
+              <span class="menuprice">22 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-share">
             <div class="menu-content">
-              <div class="col-8 col-lg-10"><a>Caña de lomo ibérico</a></div>
-              <span>22 €</span>
+              <div class="col-8 col-lg-10"><a class="menu">Caña de lomo ibérico</a></div>
+              <span class="menuprice">22 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-share">
             <div class="menu-content">
-              <div class="col-8 col-lg-10"><a>Selección de quesos del país</a></div>
-              <span>15 €</span>
+              <div class="col-8 col-lg-10"><a class="menu">Selección de quesos del país</a></div>
+              <span class="menuprice">15 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-share">
             <div class="menu-content">
-              <div class="col-8 col-lg-10"><a>Anchoas del Cantábrico</a></div>
-              <span>18 €</span>
+              <div class="col-8 col-lg-10"><a class="menu">Anchoas del Cantábrico</a></div>
+              <span class="menuprice">18 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-share">
             <div class="menu-content">
-              <div class="col-8 col-lg-10"><a>Selección de croquetas</a></div>
-              <span>12 €</span>
+              <div class="col-8 col-lg-10"><a class="menu">Selección de croquetas</a></div>
+              <span class="menuprice">12 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-share">
             <div class="menu-content">
-              <div class="col-8 col-lg-10"><a>Chipirones a la andaluza</a></div>
-              <span>13 €</span>
+              <div class="col-8 col-lg-10"><a class="menu">Chipirones a la andaluza</a></div>
+              <span class="menuprice">13 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-share">
             <div class="menu-content">
-              <div class="col-8 col-lg-10"><a>Calamar de caña con crema de patata y tinta de calamar</a></div>
-              <span>17 €</span>
+              <div class="col-8 col-lg-10"><a class="menu">Calamar de caña con crema de patata y tinta de calamar</a>
+              </div>
+              <span class="menuprice">17 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-share">
             <div class="menu-content">
-              <div class="col-8 col-lg-10"><a>Pulpo con cola de gambón al ajillo</a></div>
-              <span>15 €</span>
+              <div class="col-8 col-lg-10"><a class="menu">Pulpo con cola de gambón al ajillo</a></div>
+              <span class="menuprice">15 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-share">
             <div class="menu-content">
-              <div class="col-8 col-lg-10"><a>Ensaladilla rusa casera</a></div>
-              <span>12 €</span>
+              <div class="col-8 col-lg-10"><a class="menu">Ensaladilla rusa casera</a></div>
+              <span class="menuprice">12 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-share">
             <div class="menu-content">
-              <div class="col-8 col-lg-10"><a>Gambón en tempura de ajo</a></div>
-              <span>12 €</span>
+              <div class="col-8 col-lg-10"><a class="menu">Gambón en tempura de ajo</a></div>
+              <span class="menuprice">12 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-share">
             <div class="menu-content">
-              <div class="col-8 col-lg-10"><a>Bacalao de la casa</a></div>
-              <span>12 €</span>
+              <div class="col-8 col-lg-10"><a class="menu">Bacalao de la casa</a></div>
+              <span class="menuprice">12 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-share">
             <div class="menu-content">
-              <div class="col-8 col-lg-10"><a>Mosaico de huevos rotos con jamón</a></div>
-              <span>14 €</span>
+              <div class="col-8 col-lg-10"><a class="menu">Mosaico de huevos rotos con jamón</a></div>
+              <span class="menuprice">14 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-share">
             <div class="menu-content">
-              <div class="col-8 col-lg-10"><a>Mosaico de huevos rotos con gambas y gulas</a></div>
-              <span>14 €</span>
+              <div class="col-8 col-lg-10"><a class="menu">Mosaico de huevos rotos con gambas y gulas</a></div>
+              <span class="menuprice">14 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-share">
             <div class="menu-content">
-              <div class="col-8 col-lg-10"><a>Rollos de salmón rellenos de marisco con perfume de trufa</a></div>
-              <span>12 €</span>
+              <div class="col-8 col-lg-10"><a class="menu">Rollos de salmón rellenos de marisco con perfume de trufa</a>
+              </div>
+              <span class="menuprice">12 €</span>
 
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-share">
             <div class="menu-content">
-              <div class="col-8 col-lg-10"><a>Quesadillas de pollo con 3 quesos y guacamole</a></div>
-              <span>12 €</span>
+              <div class="col-8 col-lg-10"><a class="menu">Quesadillas de pollo con 3 quesos y guacamole</a></div>
+              <span class="menuprice">12 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-share">
             <div class="menu-content">
-              <div class="col-8 col-lg-10"><a>Habitas con huevos y jamón</a></div>
-              <span>14 €</span>
+              <div class="col-8 col-lg-10"><a class="menu">Habitas con huevos y jamón</a></div>
+              <span class="menuprice">14 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-share">
             <div class="menu-content">
-              <div class="col-8 col-lg-10"><a>Combo La Maliciosa, oreja, bravas y calamares</a></div>
-              <span>16 €</span>
+              <div class="col-8 col-lg-10"><a class="menu">Combo La Maliciosa, oreja, bravas y calamares</a></div>
+              <span class="menuprice">16 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-salads">
             <div class="menu-content">
-              <div class="col-8 col-lg-10"><a>Ensalada de burrata con vinagreta de piñones</a></div>
-              <span>13 €</span>
+              <div class="col-8 col-lg-10"><a class="menu">Ensalada de burrata con vinagreta de piñones</a></div>
+              <span class="menuprice">13 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-salads">
             <div class="menu-content">
-              <div class="col-8 col-lg-10"><a>Ensalada de ventresca</a></div>
-              <span>14 €</span>
+              <div class="col-8 col-lg-10"><a class="menu">Ensalada de ventresca</a></div>
+              <span class="menuprice">14 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-salads">
             <div class="menu-content">
-              <div class="col-8 col-lg-10"><a>Ensalada de queso de cabra y nueces</a></div>
-              <span>12 €</span>
+              <div class="col-8 col-lg-10"><a class="menu">Ensalada de queso de cabra y nueces</a></div>
+              <span class="menuprice">12 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-salads">
             <div class="menu-content">
-              <div class="col-8 col-lg-10"><a>Ensalada templada de escarola, ajo chips y gambas</a></div>
-              <span>13 €</span>
+              <div class="col-8 col-lg-10"><a class="menu">Ensalada templada de escarola, ajo chips y gambas</a></div>
+              <span class="menuprice">13 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-shellfish">
             <div class="menu-content">
-              <div class="col-8 col-lg-10"><a>Zamburiñas estilo thai</a></div>
-              <span>14 €</span>
+              <div class="col-8 col-lg-10"><a class="menu">Zamburiñas estilo thai</a></div>
+              <span class="menuprice">14 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-shellfish">
             <div class="menu-content">
-              <div class="col-8 col-lg-10"><a>Mejillones al vapor</a></div>
-              <span>10 €</span>
+              <div class="col-8 col-lg-10"><a class="menu">Mejillones al vapor</a></div>
+              <span class="menuprice">10 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-shellfish">
             <div class="menu-content">
-              <div class="col-8 col-lg-10"><a>Gambón plancha</a></div>
-              <span>12 €</span>
+              <div class="col-8 col-lg-10"><a class="menu">Gambón plancha</a></div>
+              <span class="menuprice">12 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-seas">
             <div class="menu-content">
-              <div class="col-8 col-lg-10"><a>Tacos de bacalao en tempura con guacamole</a></div>
-              <span>16 €</span>
+              <div class="col-8 col-lg-10"><a class="menu">Tacos de bacalao en tempura con guacamole</a></div>
+              <span class="menuprice">16 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-seas">
             <div class="menu-content">
-              <div class="col-8 col-lg-10"><a>Tataki de atún rojo sobre cama de verduras con soja</a></div>
-              <span>18 €</span>
+              <div class="col-8 col-lg-10"><a class="menu">Tataki de atún rojo sobre cama de verduras con soja</a></div>
+              <span class="menuprice">18 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-country">
             <div class="menu-content">
-              <div class="col-8 col-lg-10"><a>Morcilla plancha</a></div>
-              <span>10 €</span>
+              <div class="col-8 col-lg-10"><a class="menu">Morcilla plancha</a></div>
+              <span class="menuprice">10 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-country">
             <div class="menu-content">
-              <div class="col-8 col-lg-10"><a>Presa ibérica con crema de calabaza y salteado de setas</a></div>
-              <span>17 €</span>
+              <div class="col-8 col-lg-10"><a class="menu">Presa ibérica con crema de calabaza y salteado de setas</a>
+              </div>
+              <span class="menuprice">17 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-country">
             <div class="menu-content">
-              <div class="col-8 col-lg-10"><a>Magret de pato con crema de patata trufada y huevo escalfado</a></div>
-              <span>15 €</span>
+              <div class="col-8 col-lg-10"><a class="menu">Magret de pato con crema de patata trufada y huevo
+                  escalfado</a></div>
+              <span class="menuprice">15 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-country">
             <div class="menu-content">
-              <div class="col-8 col-lg-10"><a>Chuletón trinchado con patatas y pimientos de Guernica</a></div>
-              <span>26 €</span>
+              <div class="col-8 col-lg-10"><a class="menu">Chuletón trinchado con patatas y pimientos de Guernica</a>
+              </div>
+              <span class="menuprice">26 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-country">
             <div class="menu-content">
-              <div class="col-8 col-lg-10"><a>Hamburguesa La Maliciosa</a></div>
-              <span>11 €</span>
+              <div class="col-8 col-lg-10"><a class="menu">Hamburguesa La Maliciosa</a></div>
+              <span class="menuprice">11 €</span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-country">
             <div class="menu-content">
-              <div class="col-8 col-lg-10"><a>Cecina de León</a></div>
-              <span>12 €</span>
+              <div class="col-8 col-lg-10"><a class="menu">Cecina de León</a></div>
+              <span class="menuprice">12 €</span>
             </div>
           </div>
 
@@ -480,7 +485,7 @@
               <div class="tab-pane active show" id="tab-1">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Suprema de bacalao en tempura con tomatitos y espinacas</h3>
+                    <h3 class="mt-4">Suprema de bacalao en tempura con tomatitos y espinacas</h3>
                     <p>Se nos hace la boca agua con ver y oler este plato... Y sabemos que a ti también...
                       Suprema de bacalao en tempura con tomatitos y espinacas.</p>
                   </div>
@@ -492,7 +497,7 @@
               <div class="tab-pane" id="tab-2">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Pulpo con cola de gambón al ajillo</h3>
+                    <h3 class="mt-4">Pulpo con cola de gambón al ajillo</h3>
                     <p>Pulpo braseado sobre crema de patatas con un toque de tinta de calamar, ajillo y pimentón dulce
                       de la vera.</p>
                   </div>
@@ -505,7 +510,7 @@
               <div class="tab-pane" id="tab-3">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Hamburguesa de La Maliciosa</h3>
+                    <h3 class="mt-4">Hamburguesa de La Maliciosa</h3>
                     <p>Hamburguesote de La Maliciosa Esto está para que te lo goces sin ningún tipo de
                       remordimiento, y lo sabes... Y para que te chupes los dedos, ¡por supuesto!</p>
                   </div>
@@ -517,7 +522,7 @@
               <div class="tab-pane" id="tab-4">
                 <div class="row">
                   <div class="col-lg-8 details order-2 order-lg-1">
-                    <h3>Ensalada de burrata con vinagreta de piñones</h3>
+                    <h3 class="mt-4">Ensalada de burrata con vinagreta de piñones</h3>
                     <p>Ensalada de burrata con vinagreta de piñones La Maliciosa. ¡Perfecta para el veranito un
                       plato fresquito lleno de color y sabor!</p>
                   </div>
@@ -610,7 +615,8 @@
             </div>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Muy recomendable! Lo mejor las zamburiñas, riquísimas. Preguntad por lo que tienen fuera de carta, merece la pena.
+              Muy recomendable! Lo mejor las zamburiñas, riquísimas. Preguntad por lo que tienen fuera de carta, merece
+              la pena.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
           </div>
@@ -627,7 +633,8 @@
             </div>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Mi sitio favorito en el barrio para tomar el aperitivo y comer rico, rico. El equipo humano es impresionante, atento y muy profesional. Totalmente recomendable.
+              Mi sitio favorito en el barrio para tomar el aperitivo y comer rico, rico. El equipo humano es
+              impresionante, atento y muy profesional. Totalmente recomendable.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
           </div>
@@ -779,9 +786,10 @@
   <footer id="footer">
     <div class="container">
       <h3 class="fontCurlz">La Maliciosa</h3>
-      <p>Lugar de encuentros y de reencuentros.</p>      
+      <p>Lugar de encuentros y de reencuentros.</p>
       <div class="copyright">
-        &copy; <strong><span>La Maliciosa </span></strong><script>document.write(new Date().getFullYear());</script>.
+        &copy; <strong><span>La Maliciosa </span></strong>
+        <script>document.write(new Date().getFullYear());</script>.
       </div>
     </div>
   </footer><!-- End Footer -->
