--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="menu-flters">
               <li data-filter="*" class="filter-active">Mostrar todo</li>
-              <li data-filter=".filter-share">Para compartir</li>
+              <li id="miBoton" data-filter=".filter-share">Para compartir</li>
               <li data-filter=".filter-salads">Nuestras ensaladas</li>
               <li data-filter=".filter-shellfish">Algo de marisco y concha</li>
               <li data-filter=".filter-seas">De nuestros mares</li>
@@ -808,6 +808,15 @@
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script>
+    document.onreadystatechange = function () {
+      if (document.readyState == "interactive") {
+        setTimeout(() => {
+          document.getElementById('miBoton').click()
+        }, 1000);
+      }
+    }
+  </script>
 
 </body>
 
